# qsim

./: CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
bindings/: CMakeLists.txt  qsim_py.cpp
include/: qsim.hpp
include/qsim/: qsim.hpp
include/qsim/action/: action.hpp  primitive.hpp
include/qsim/core/: constants.hpp  particle.hpp  simulator.hpp  system.hpp  types.hpp
include/qsim/path/: bead.hpp  path.hpp  path_ensemble.hpp
include/qsim/potential/: harmonic.hpp
include/qsim/rng/: XoshiroCpp.hpp  rng.hpp  splitmix.hpp  xoshiro.hpp
python/qsim/: __init__.py
src/: CMakeLists.txt  main.cpp  types_demo.cpp
src/core/: simulator.cpp
tests/: CMakeLists.txt
tests/cpp/: types_test.cpp
tests/cpp/engine/: test_engine.cpp
tests/cpp/unit/: copy.cpp  test_parallel.cpp  test_particle.cpp  test_path.cpp  test_path_ensemble.cpp  test_system.cpp  test_types.cpp  test_xoshiro.cpp
