[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.10.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "qsim"
version = "0.1.0"
description = "pimc package with c++"
readme = "README.md"
authors = [
    {name = "Brandon Lee", email = "bkl46@case.edu"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Physics",
]


[tool.scikit-build]
cmake.minimum-version = "3.15"

# build type
cmake.build-type = "Release"

# destination of final python package 
wheel.packages = ["python/qsim"] 


sdist.include = [
    "CMakeLists.txt",
    "bindings/",
    "include/",
    "src/",
    "python/",
    "tests/",
    "README.md",
]


sdist.exclude = [
    "*.pyc",
    "__pycache__/",
    ".venv/",
    "build/",
    "dist/",
    "*.so",
    "*.dylib",
    "*.pyd",
]


wheel.exclude = [
    "tests/",
]

[tool.scikit-build.cmake.define]

CMAKE_POSITION_INDEPENDENT_CODE = "ON"

CMAKE_BUILD_TYPE = "Release"
